[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/custom_material_creator/silly_material_creator.gd" type="Script" id=1]

[node name="Silly Material Creator" type="Panel"]
margin_right = 220.0
margin_bottom = 340.0
script = ExtResource( 1 )

[node name="Label_dock_name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 10.0
margin_right = 73.0
margin_bottom = 24.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Silly material creator"
align = 1

[node name="Label_albedo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 64.0
text = "Albedo color"
align = 1

[node name="ColorPicker_albedo" type="ColorPickerButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 70.0
margin_right = 100.0
margin_bottom = 90.0
color = Color( 1, 1, 1, 1 )

[node name="Label_metallic" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 114.0
text = "Metallic strength"
align = 1

[node name="HSlider_metallic" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 120.0
margin_right = 100.0
margin_bottom = 136.0
max_value = 1.0
step = 0.05

[node name="Label_roughness" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 150.0
margin_right = 100.0
margin_bottom = 164.0
text = "Roughness strength"
align = 1

[node name="HSlider_roughness" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 170.0
margin_right = 100.0
margin_bottom = 186.0
max_value = 1.0
step = 0.05

[node name="Button_save" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 210.0
margin_right = 100.0
margin_bottom = 260.0
text = "Save silly material"

[node name="Button_load" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 270.0
margin_right = 100.0
margin_bottom = 330.0
clip_text = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Button_load"]
margin_right = 200.0
margin_bottom = 60.0
text = "Load silly material
and apply to selected node(s)"
align = 1
valign = 1
autowrap = true

[node name="Save_FileDialog" type="FileDialog" parent="."]
margin_left = 150.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 360.0
resizable = true
filters = PoolStringArray( "*.silly_mat" )

[node name="Load_FileDialog" type="FileDialog" parent="."]
margin_left = 150.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 360.0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.silly_mat" )

